# libsmpp34

./: .gitignore  Makefile.am  README.md  TODO-RELEASE  configure.ac
binaries/: Makefile.am
binary/: Makefile.am
contrib/: jenkins.sh  libsmpp34.spec  libsmpp34.spec.in
debian/: changelog  control  libsmpp0.install  libsmpp34-dev.install  rules
def_frame/: deliver_sm.frame  replace_sm.frame  submit_multi.frame  submit_sm.frame
src/: Makefile.am  smpp34.h  smpp34_dumpBuf.c  smpp34_dumpPdu.c  smpp34_heap.c  smpp34_heap.h  smpp34_pack.c  smpp34_params.c  smpp34_structs.c  smpp34_structs.h  smpp34_unpack.c  smpp34_version.h.tpl
test_apps/: Makefile.am  esme.c  esme.xml  sendwp.c  smpp.c  smpp_smsc.c  smsc_main.c  tcp.c
test_pdu/: bind_receiver_resp_test.c  bind_receiver_test.c  bind_transceiver_test.c  submit_sm_test.c
